...
                                <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                                <items>
                                    <navigationItem title="履歴" id="E5S-Of-d5l"/>
                                </items>
                            </navigationBar>
...
                                                    <rect key="frame" x="50" y="0.0" width="90" height="35"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="身長:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5WA-R7-oYx">
                                                            <rect key="frame" x="0.0" y="0.0" width="33" height="35"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                    <rect key="frame" x="140" y="0.0" width="90" height="35"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="体重:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n28-oY-Evv">
                                                            <rect key="frame" x="0.0" y="0.0" width="33" height="35"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                                <items>
                                    <navigationItem title="入力" id="cXc-0d-EMx"/>
                                </items>
                            </navigationBar>
...
                                                <rect key="frame" x="0.0" y="0.0" width="414" height="623"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="身長と体重を入力してください" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OwA-6c-vxL">
                                                        <rect key="frame" x="78.666666666666686" y="20" width="257" height="21.666666666666671"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
...
                                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <state key="normal" title="BMIを計算する"/>
                                                        <connections>
                                                            <action selector="calculation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UGH-k8-5aQ"/>
...
                                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <state key="normal" title="削除"/>
                                                                <connections>
                                                                    <action selector="dataDelete:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IEi-Sc-3fn"/>
...
                                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <state key="normal" title="保存する"/>
                                                                <connections>
                                                                    <action selector="dataSave:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CGO-hD-LdV"/>
...
