...
        if let action = action {
            for item in action {
                alert.addAction(item)
            }
        } else {
            // アクションの指定がなかった場合はOKボタン押下のみ
            let ok = UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil)
            alert.addAction(ok)
        }
        self.present(alert, animated: true, completion: nil)
    }

    // MARK: - ボタンアクション
...
        // OKボタン
        let okAction = UIAlertAction(title: "削除", style: UIAlertAction.Style.default) {
            (action: UIAlertAction) in
            self.bodyDataHistory.removeData(date: Util.stringDate())
        }
        // キャンセルボタン
        let cancelAction = UIAlertAction(title: "キャンセル", style: UIAlertAction.Style.default, handler: nil)
        
        self.showAlert("今日のデータを削除しますか？", action: [okAction, cancelAction])

    }

    private func getTodayData() -> BodyData? {
...
